Update narratives for SI-3

--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -64,17 +64,17 @@ satisfies:
   narrative:
     - key: a
       text: |
-        **DEFAULT_CONTROL** Employs malicious code protection mechanisms at information
-        system entry and exit points to detect and eradicate malicious code;
+        cloud.gov employs ClamAV at information system entry and exit points to
+        detect and eradicate malicious code;
     - key: b
       text: |
-        **DEFAULT_CONTROL** Updates malicious code protection mechanisms whenever
-        new releases are available in accordance with organizational configuration management policy and procedures;
+        18F updates ClamAV whenever new releases are available in accordance
+        with organizational configuration management policy and procedures;
     - key: c
       text: |
-        **DEFAULT_CONTROL** Configures malicious code protection mechanisms to:
+        The 18F DevOps and SecOps teams configures ClamAV to:
 
-          1. Perform periodic scans of the information system [Assignment: organization-
+          1. Perform on-access scans of cloud.gov [Assignment: organization-
           defined frequency] and real-time scans of files from external sources at
           [Selection (one or more); endpoint; network entry/exit points] as the files
           are downloaded, opened, or executed in accordance with organizational
@@ -85,7 +85,7 @@ satisfies:
           in response to malicious code detection; and
     - key: d
       text: |
-        **DEFAULT_CONTROL** Addresses the receipt of false positives during malicious
+        cloud.gov addresses the receipt of false positives during malicious
         code detection and eradication and the resulting potential impact on the
         availability of the information system.
   standard_key: NIST-800-53
@@ -95,8 +95,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** 18F centrally manages malicious code protection
-      mechanisms.
+      18F centrally manages malicious code protection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-3 (2)
   covered_by:
@@ -104,8 +103,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** cloud.gov automatically updates malicious code
-      protection mechanisms.
+      cloud.gov automatically updates ClamAV malicious code protection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-3 (7)
   covered_by:
@@ -113,8 +111,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** cloud.gov implements nonsignature-based
-      malicious code detection mechanisms.
+     cloud.gov implements nonsignature-based malicious code detection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-4
   covered_by:
