--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -305,10 +305,10 @@ satisfies:
   narrative:
   - key: a
     text: |
-      **DEFAULT_CONTROL** Employs spam protection mechanisms at information system entry and exit points to detect and take action on unsolicited messages; and
+      Employs spam protection mechanisms at information system entry and exit points to detect and take action on unsolicited messages; and
   - key: b
     text: |
-      **DEFAULT_CONTROL** Updates spam protection mechanisms when new releases are available in accordance with organizational configuration management policy and procedures.
+      Updates spam protection mechanisms when new releases are available in accordance with organizational configuration management policy and procedures.
   standard_key: NIST-800-53
 - control_key: SI-8 (1)
   covered_by:
@@ -316,7 +316,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** The organization centrally manages spam protection mechanisms.
+      The organization centrally manages spam protection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-8 (2)
   covered_by:
@@ -324,7 +324,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** The information system automatically updates spam protection mechanisms.
+      The information system automatically updates spam protection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-10
   covered_by:
