Update narratives for SI-11

--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -341,10 +341,10 @@ satisfies:
   narrative:
   - key: a
     text: |
-      **DEFAULT_CONTROL** Generates error messages that provide information necessary for corrective actions without revealing information that could be exploited by adversaries; and
+      Generates error messages that provide information necessary for corrective actions without revealing information that could be exploited by adversaries; and
   - key: b
     text: |
-      **DEFAULT_CONTROL** Reveals error messages only to [Assignment: organization-defined personnel or roles].
+      Reveals error messages only to [Assignment: organization-defined personnel or roles].
   standard_key: NIST-800-53
 - control_key: SI-12
   covered_by:
