--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -352,7 +352,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** The organization handles and retains information within the information system and information output from the system in accordance with applicable federal laws, Executive Orders, directives, policies, regulations, standards, and operational requirements.
+      The organization handles and retains information within the information system and information output from the system in accordance with applicable federal laws, Executive Orders, directives, policies, regulations, standards, and operational requirements.
   standard_key: NIST-800-53
 - control_key: SI-16
   covered_by:
