--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -360,7 +360,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      **DEFAULT_CONTROL** The information system implements [Assignment: organization-defined security safeguards] to protect its memory from unauthorized code execution.
+      The information system implements [Assignment: organization-defined security safeguards] to protect its memory from unauthorized code execution.
   standard_key: NIST-800-53
 system: 18F
 verifications:
