--- a/CloudCheckr/component.yaml
+++ b/CloudCheckr/component.yaml
@@ -116,4 +116,11 @@ satisfies:
     - text: |
         CloudTrail Log File Name Format CloudTrail uses the following file name format for the log file objects it uploads to your S3 bucket: AccountID_CloudTrail_RegionName_YYYYMMDDTHHmmZ_UniqueString.FileNameFormat YYYY, MM, DD, HH, and mm are the digits of the year, month, day, hour, and minute (respectively) when the log file was delivered. Hours are in 24-hour format. The Z indicates that the time is in UTC.
   standard_key: NIST-800-53
-schema_version: 2.0
+- control_key: CM-3
+  covered_by: []
+  implementation_status: none
+  narrative:
+  - key: c
+    text: |
+      For changes related to the virtual infrastructure, 18F uses VisualOps and Cloud Checkr for real-time configuration changes which are documented, approved and tracked within GitHub. All Cloud Foundry configuration changes are documented, approved and tracked within 18F's GitHub site.
+schema_version: 3.0.0
