--- a/PS_Policy/component.yaml
+++ b/PS_Policy/component.yaml
@@ -1,3 +1,4 @@
+---
 documentation_complete: false
 name: Personnel Security Policy for 18F
 satisfies:
@@ -15,10 +16,10 @@ verifications:
   name: policy document
   path: https://github.com/18f/compliance-docs/blob/master/PS-Policy.md
   type: url
-- description: "GIVEN the github link - <policy> THEN the policy has been updated\
-    \ within the last 180 days \n"
+- description: "GIVEN the github link - <policy> THEN the policy has been updated
+    within the last 180 days \n"
   key: Policy_Update_Test
-  last_run: 2016-04-07 13:25:17.707361
+  last_run: 2016-04-07 08:25:17.707361000 -05:00
   name: 18F Policies Update
   path: BDD/policies.feature
   test_passed: false
