--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -186,8 +186,19 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: |-
-      TODO
+    - key: a
+      text: Requires that providers of external information system services comply with organizational information security requirements and employ [Assignment: organization-defined security controls] in accordance with applicable federal laws, Executive Orders, directives, policies, regulations, standards, and guidance;
+    - key: b
+      text: Defines and documents government oversight and user roles and responsibilities with regard to external information system services; and
+    - key: c
+      text: Employs [Assignment: organization-defined processes, methods, and techniques] to monitor security control compliance by external service providers on an ongoing basis.
+  parameters:
+  - key: SA-9
+    text: |
+      [Assignment: organization-defined security controls]
+  - key: SA-9
+    text: |
+      [Assignment: organization-defined processes, methods, and techniques]
   standard_key: NIST-800-53
 - control_key: SA-9 (1)
   covered_by:
